@@ -1,5 +1,6 @@
 {{$NEXT}}
   - Fix default sort when the configured locale does not have an alphanumeric collation (e.g. LC_COLLATE=C)
+  - Add B/ignore-backups option
 
 0.005     2018-10-24 01:10:27 EDT
   - Do tilde expansion with Path::ExpandTilde instead of Path::Tiny
